--- a/chat-app/.gitignore
+++ b/chat-app/.gitignore
@@ -21,3 +21,10 @@
 yarn-debug.log*
 yarn-error.log*
 .yarn-integrity
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
