--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -8,6 +10,7 @@
     "react_ujs": "^2.5.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "webpack-dev-server": "^3.3.1"
   }
 }
